# xml-parser

./: .gitignore  Cargo.toml  Makefile  README.md
src/: grammar.pest  lib.rs  main.rs
tests/: xml_parser_tests.rs
