[package]
name = "xml-parser"
description = "A command-line interface for parsing XML files. This tool allows you to parse XML files and display their content in a structured format."
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "1.0.69"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
